[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Map.gd" type="Script" id=1]
[ext_resource path="res://Sprites/GUIbar.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Friendly.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemy.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Obstacle.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Distancecircle.png" type="Texture" id=6]

[node name="Map" type="Node2D"]
script = ExtResource( 1 )

[node name="GUIbar" type="Sprite" parent="."]
position = Vector2( -0.37735, 0.37735 )
texture = ExtResource( 2 )
centered = false

[node name="CreateUnit" type="TextureButton" parent="."]
margin_left = 70.7789
margin_top = 32.7299
margin_right = 110.779
margin_bottom = 72.7299
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )
expand = true

[node name="CreateEnemy" type="TextureButton" parent="."]
margin_left = 135.769
margin_top = 32.7175
margin_right = 175.769
margin_bottom = 72.7175
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true

[node name="CreateObstacle" type="TextureButton" parent="."]
margin_left = 199.835
margin_top = 32.5022
margin_right = 239.835
margin_bottom = 72.5022
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true

[node name="CreateUnitLabel" type="Label" parent="."]
margin_left = 65.5789
margin_top = 8.96114
margin_right = 116.579
margin_bottom = 22.9611
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Friendly"

[node name="CreateEnemyLabel" type="Label" parent="."]
margin_left = 134.239
margin_top = 9.40127
margin_right = 177.239
margin_bottom = 23.4013
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enemy"

[node name="CreateObstacleLabel" type="Label" parent="."]
margin_left = 193.216
margin_top = 10.2815
margin_right = 250.216
margin_bottom = 24.2815
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Obstacle"

[node name="Name" type="Label" parent="."]
margin_left = 318.039
margin_top = 15.6044
margin_right = 431.039
margin_bottom = 29.6044
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Input Name here:"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 289.316
margin_top = 39.1614
margin_right = 462.316
margin_bottom = 63.1614

[node name="Distance" type="Sprite" parent="."]
visible = false
position = Vector2( 585.639, 396.933 )
z_index = -1
texture = ExtResource( 6 )
[connection signal="button_up" from="CreateUnit" to="." method="_on_CreateUnit_button_up"]
[connection signal="button_up" from="CreateEnemy" to="." method="_on_CreateEnemy_button_up"]
[connection signal="button_up" from="CreateObstacle" to="." method="_on_CreateObstacle_button_up"]
